--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Seneca error test.",
   "main": "error-test.js",
   "scripts": {
+    "lint": "lab -dL",
+    "test": "lab -v -P test -L"
   },
   "repository": {
     "type": "git",
@@ -25,5 +27,10 @@
     "LICENSE.txt",
     "README.md",
     "error-test.js"
-  ]
+  ],
+  "devDependencies": {
+    "eslint-config-seneca": "1.1.x",
+    "eslint-plugin-standard": "1.3.x",
+    "lab": "6.2.x"
+  }
 }
