--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "error-test.js",
   "scripts": {
     "lint": "lab -dL",
-    "test": "lab -v -P test -L"
+    "test:node6": "LAB_FLAGS='--leaks' && npm test",
+    "test": "lab -v -P test -L $LAB_FLAGS"
   },
   "repository": {
     "type": "git",
